Fix: Alteração na estrutura anterior
